--- a/sytle.css
+++ b/sytle.css
@@ -69,6 +69,15 @@ body {
     height: 100vh;
 }
 
+
+.abcdef:hover {
+
+    background-color: rgba(0, 0, 0, 0.389);
+    color: white;
+
+}
+
+
 /* About */
 
 #About {
