--- a/sytle.css
+++ b/sytle.css
@@ -41,7 +41,7 @@ body {
 
 .text-darkNav .nav-item a {
     color: black !important;
-    font-weight: bold ;
+    font-weight: bold;
 }
 
 .git {
@@ -51,11 +51,13 @@ body {
     align-items: center;
     cursor: pointer;
     text-decoration: none;
+    border: 2px solid;
 
 }
 
 .git:hover {
-    background-color: #088aa4f1;
+    background-color: black;
+    color: white;
 }
 
 .overlay {
@@ -74,7 +76,6 @@ body {
 
 .abcdef:hover {
 
-    background-color: rgba(0, 0, 0, 0.389);
     color: white;
 
 }
